; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_vp9.c_dxva2_vp9_end_frame.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxva2_vp9.c_dxva2_vp9_end_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { %struct.TYPE_7__, %struct.vp9_dxva2_picture_context* }
%struct.TYPE_7__ = type { i32 }
%struct.vp9_dxva2_picture_context = type { i64, i32 }

@CUR_FRAME = common dso_local global i64 0, align 8
@commit_bitstream_and_slice_buffer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*)* @dxva2_vp9_end_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dxva2_vp9_end_frame(%struct.TYPE_10__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_10__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca %struct.vp9_dxva2_picture_context*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %3, align 8
  %7 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %8, align 8
  store %struct.TYPE_9__* %9, %struct.TYPE_9__** %4, align 8
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %11, align 8
  %13 = load i64, i64* @CUR_FRAME, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %14, i32 0, i32 1
  %16 = load %struct.vp9_dxva2_picture_context*, %struct.vp9_dxva2_picture_context** %15, align 8
  store %struct.vp9_dxva2_picture_context* %16, %struct.vp9_dxva2_picture_context** %5, align 8
  %17 = load %struct.vp9_dxva2_picture_context*, %struct.vp9_dxva2_picture_context** %5, align 8
  %18 = getelementptr inbounds %struct.vp9_dxva2_picture_context, %struct.vp9_dxva2_picture_context* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp sle i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %37

22:                                               ; preds = %1
  %23 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %24 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %25, align 8
  %27 = load i64, i64* @CUR_FRAME, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i64 %27
  %29 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load %struct.vp9_dxva2_picture_context*, %struct.vp9_dxva2_picture_context** %5, align 8
  %33 = getelementptr inbounds %struct.vp9_dxva2_picture_context, %struct.vp9_dxva2_picture_context* %32, i32 0, i32 1
  %34 = load i32, i32* @commit_bitstream_and_slice_buffer, align 4
  %35 = call i32 @ff_dxva2_common_end_frame(%struct.TYPE_10__* %23, i32 %31, i32* %33, i32 4, i32* null, i32 0, i32 %34)
  store i32 %35, i32* %6, align 4
  %36 = load i32, i32* %6, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %22, %21
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @ff_dxva2_common_end_frame(%struct.TYPE_10__*, i32, i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
